# wurcs-ph2

./: .gitignore  WURCS.sln  tasks_decription.txt
Phase2-dev/: .env  dt_dictionary.csv  dt_railroads_to_process.csv  dt_trans.csv  main.py  pyproject.toml  replacements.txt  requirements.txt
Phase2-dev/csvs/: dt_railroads_to_process.csv  dt_trans.csv
Phase2-dev/src/core/: Create_reports_first2sheets.py  Create_reports_new.py  Prepare_phase2_input_data.py  back_A2P2.py  create_reports_orig.py  dt_dictionary.csv  dt_trans.csv  temp.py
Phase2-dev/src/data/: db_data.py
Phase2-dev/src/model/: Report.py
Phase2-dev/src/quality_check/: CompareTwoSheets.py  CompareTwoWorkBooks.py
Phase2-dev/src/report_builder/core/: context.py  createReports.py  currentDF.py  discovery.py  registry.py  registry_store.py
Phase2-dev/src/report_builder/sheets/: __init__.py  a1p1.py  a1p2a.py  a1p2b.py  a1p2c.py  a1p3a.py  a1p3b.py  a1p4.py  a1p5a.py  a1p5b.py  a1p6.py  a1p7.py  a1p8.py  a1p9.py  a2p1.py  a2p2.py  a2p3.py  a2p4.py  a3p1.py  a3p2.py  a3p3.py  a3p4.py  index.py
Phase2-dev/src/services/: CopyS3RedShift.py  DBManager.py  ExportToCSV.py  RedShiftConnection.py  UploadtoS3.py  research_sql.txt
Phase2-dev/src/utils/: excel_formula_handler.py  utility.py
Phase2-dev/src/vb/: phase2.vb
Phase2-dev/tests/: conftest.py  test_db_data.py  test_dbmanager.py  test_phas2InputData.py  test_redshift_connection.py
Phase2-dev/tests/units/: test_db_manager.py  test_reports.py  test_sql_server_connection.py
WURCS/: WURCS.vbproj  app.config  packages.config
(+201 files in other folders)
